rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
spec:
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      nodePort: 31253
  selector:
    app: rest
